@@ -1,7 +1,3 @@
-Metis is available at http://www-users.cs.umn.edu/~karypis/metis/.
-It is a family of multilevel partioning algorithms copyright by the
-Regents of the University of Minnesota and is used with permission.
-
 The files src/iohb.[ch] are available at 
 http://math.nist.gov/~KRemington/harwell_io/ and carry the following
 copyright
